--- a/frontend/PhyLab_login.html
+++ b/frontend/PhyLab_login.html
@@ -90,6 +90,47 @@
         border-color: #e74c3c !important;
         box-shadow: 0 0 0 3px rgba(231, 76, 60, 0.08);
       }
+      /* Password toggle styles */
+      .input-password,
+      .input-group {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        gap: 6px;
+      }
+
+      .input-with-toggle {
+        position: relative;
+        display: flex;
+        align-items: center;
+      }
+
+      .password-toggle {
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        background: transparent;
+        border: none;
+        padding: 6px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        color: var(--color-text, #111);
+      }
+
+      .password-toggle:focus {
+        outline: 2px solid rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+      }
+      .password-input,
+      .form-input {
+        width: 100%;
+        padding-right: 44px; /* room for the toggle */
+        box-sizing: border-box;
+      }
     </style>
   </head>
   <body class="wholescreen">
@@ -113,13 +154,49 @@
 
         <div class="input-password">
           <label for="password" class="password-label">Password</label>
-          <input
-            type="password"
-            id="password_login"
-            class="password-input"
-            name="password"
-            required
-          />
+          <div class="input-with-toggle">
+            <input
+              type="password"
+              id="password_login"
+              class="password-input"
+              name="password"
+              required
+            />
+            <button
+              type="button"
+              class="password-toggle"
+              aria-pressed="false"
+              aria-label="Show password"
+              onclick="togglePassword('password_login', this)"
+            >
+              <!-- eye icon (show) -->
+              <svg
+                width="18"
+                height="18"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+              >
+                <path
+                  d="M12 5C7 5 2.7 8.1 1 12c1.7 3.9 6 7 11 7s9.3-3.1 11-7c-1.7-3.9-6-7-11-7z"
+                  stroke="currentColor"
+                  stroke-width="1.2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <circle
+                  cx="12"
+                  cy="12"
+                  r="3"
+                  stroke="currentColor"
+                  stroke-width="1.2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+          </div>
         </div>
 
         <div class="checkbox-button">
@@ -198,13 +275,48 @@
 
           <div class="input-group">
             <label for="password" class="input-label">Password</label>
-            <input
-              type="password"
-              id="password_reg"
-              class="form-input"
-              placeholder="••••••••"
-              required
-            />
+            <div class="input-with-toggle">
+              <input
+                type="password"
+                id="password_reg"
+                class="form-input"
+                placeholder="••••••••"
+                required
+              />
+              <button
+                type="button"
+                class="password-toggle"
+                aria-pressed="false"
+                aria-label="Show password"
+                onclick="togglePassword('password_reg', this)"
+              >
+                <svg
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                >
+                  <path
+                    d="M12 5C7 5 2.7 8.1 1 12c1.7 3.9 6 7 11 7s9.3-3.1 11-7c-1.7-3.9-6-7-11-7z"
+                    stroke="currentColor"
+                    stroke-width="1.2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <circle
+                    cx="12"
+                    cy="12"
+                    r="3"
+                    stroke="currentColor"
+                    stroke-width="1.2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
           </div>
 
           <button type="submit" class="register-btn">Register</button>
@@ -666,6 +778,28 @@
             err.style.display = "block";
           }
           if (input) input.classList.add("input-error");
+        }
+      }
+      // Toggle password visibility (used by login and register password fields)
+      function togglePassword(inputId, btn) {
+        const input = document.getElementById(inputId);
+        if (!input || !btn) return;
+        const eyeSvg =
+          '<svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M12 5C7 5 2.7 8.1 1 12c1.7 3.9 6 7 11 7s9.3-3.1 11-7c-1.7-3.9-6-7-11-7z" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>';
+        const eyeSlashSvg =
+          '<svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M17.94 17.94A10.94 10.94 0 0 1 12 19c-5 0-9.3-3.1-11-7 .7-1.7 1.8-3.2 3.1-4.5M3 3l18 18" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><path d="M9.88 9.88a3 3 0 0 0 4.24 4.24" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>';
+
+        const isPassword = input.type === "password";
+        if (isPassword) {
+          input.type = "text";
+          btn.setAttribute("aria-pressed", "true");
+          btn.setAttribute("title", "Hide password");
+          btn.innerHTML = eyeSlashSvg;
+        } else {
+          input.type = "password";
+          btn.setAttribute("aria-pressed", "false");
+          btn.setAttribute("title", "Show password");
+          btn.innerHTML = eyeSvg;
         }
       }
 
