--- a/frontend/PhyLab_admin_page.html
+++ b/frontend/PhyLab_admin_page.html
@@ -855,19 +855,25 @@
       // ============================================
 
       let currentRemarkRequestId = null;
+      let currentRemarkItemId = null;
       let currentRemarkItemName = null;
 
-      function openRemarkModal(requestId, itemName) {
+      function openRemarkModal(requestId, itemId, itemName) {
         currentRemarkRequestId = requestId;
-        currentRemarkItemName = itemName;
+        currentRemarkItemId = itemId || null;
+        currentRemarkItemName = itemName || "";
 
         // Set the item name in modal
-        document.getElementById("remarkItemName").textContent = itemName;
+        document.getElementById("remarkItemName").textContent =
+          currentRemarkItemName;
 
-        // Check if there's an existing remark for this request
+        // Check if there's an existing remark for this item (fallback to request-level key)
         const remarks =
           JSON.parse(localStorage.getItem("phyLab_Remarks")) || {};
-        const existingRemark = remarks[requestId];
+        const key = currentRemarkItemId
+          ? `item_${currentRemarkItemId}`
+          : `req_${requestId}`;
+        const existingRemark = remarks[key];
 
         if (existingRemark) {
           document.getElementById("remarkType").value =
@@ -885,31 +891,82 @@
       function closeRemarkModal() {
         document.getElementById("remarkModal").classList.remove("show");
         currentRemarkRequestId = null;
+        currentRemarkItemId = null;
         currentRemarkItemName = null;
       }
 
-      function saveRemark() {
+      async function saveRemark() {
         const remarkType = document.getElementById("remarkType").value;
         const remarkText = document.getElementById("remarkText").value.trim();
 
         if (!remarkType && !remarkText) {
           showNotification(
-            "Please select an issue type or enter a description.",
+            "Please provide at least a remark type or description.",
             "warning",
           );
           return;
         }
 
-        // Save to localStorage
+        // Prepare remark object
         const remarks =
           JSON.parse(localStorage.getItem("phyLab_Remarks")) || {};
-        remarks[currentRemarkRequestId] = {
+        const key = currentRemarkItemId
+          ? `item_${currentRemarkItemId}`
+          : `req_${currentRemarkRequestId}`;
+        const remarkObj = {
           type: remarkType,
           text: remarkText,
           itemName: currentRemarkItemName,
           createdAt: new Date().toISOString(),
           createdBy: "Admin",
         };
+
+        // Attempt to persist remark to backend per-item when possible
+        let backendSucceeded = false;
+        if (currentRemarkItemId && currentRemarkRequestId) {
+          const nowIso = new Date().toISOString();
+          const payload = {
+            items: [
+              {
+                id: currentRemarkItemId,
+                admin_remark: remarkText,
+                remark_type: remarkType,
+                remark_created_at: nowIso,
+              },
+            ],
+          };
+          const urls = [
+            `http://127.0.0.1:8000/api/borrow-requests/${currentRemarkRequestId}/update_item_statuses/`,
+            `/api/borrow-requests/${currentRemarkRequestId}/update_item_statuses/`,
+          ];
+
+          for (const u of urls) {
+            try {
+              const r = await fetch(u, {
+                method: "PATCH",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(payload),
+                mode: "cors",
+              });
+              if (r && r.ok) {
+                backendSucceeded = true;
+                break;
+              } else {
+                // capture error body for debugging if available
+                try {
+                  const txt = await r.text();
+                  console.warn("Remark PATCH failed:", r.status, txt);
+                } catch (e) {}
+              }
+            } catch (e) {
+              console.warn("Remark PATCH error", e);
+              continue;
+            }
+          }
+        }
+
+        // Save to localStorage as fallback (still useful for offline UI)
+        remarks[key] = remarkObj;
         localStorage.setItem("phyLab_Remarks", JSON.stringify(remarks));
 
         // Also add remark to the request in queue for persistence
@@ -919,15 +976,22 @@
           (r) => String(r.id) === String(currentRemarkRequestId),
         );
         if (reqIndex !== -1) {
-          queue[reqIndex].adminRemark = remarks[currentRemarkRequestId];
+          queue[reqIndex].adminRemark = remarks[key];
           localStorage.setItem("phyLab_RequestQueue", JSON.stringify(queue));
         }
 
         closeRemarkModal();
-        showNotification("Remark saved successfully!", "success");
+        if (backendSucceeded) {
+          showNotification("Remark saved to server successfully!", "success");
+        } else {
+          showNotification(
+            "Remark saved locally (server unreachable).",
+            "warning",
+          );
+        }
 
         // Reload the loans view to show the remark badge
-        loadReturnWindow();
+        if (typeof loadReturnWindow === "function") loadReturnWindow();
       }
 
       // Item Edit Modal handlers
@@ -2298,7 +2362,7 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"></polyline></svg>
                                 Mark Returned
                             </button>
-                            <button class="remark-btn" onclick="openRemarkModal('${request.id}', '${item.name}')">
+                            <button class="remark-btn" onclick="openRemarkModal('${request.id}', '${item.id}', '${(item.name || item.item_name).replace(/'/g, "\'")}')">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>
                                 ${hasRemark ? "Edit" : "Remark"}
                             </button>
